# SFND

./: .gitignore
Radar/: L3_3_doppler  L3_3_doppler.m  L3_4_fft.m  L3_4_fft.m~  L3_5_fft2d.m  L4_4_CA_CFAR.m
SFND_2D_Feature_Tracking/: Project_2_udacity.ods  README.md
SFND_2D_Feature_Tracking/src/: MidTermProject_Camera_Student.cpp  matching2D_Student.cpp
SFND_3D_Object_Tracking/src/: FinalProject_Camera.cpp  camFusion_Student.cpp  matching2D_Student.cpp
SFND_Lidar_Obstacle_Detection/: CMakeLists.txt
SFND_Lidar_Obstacle_Detection/src/: environment.cpp  kdtree.h  processPointClouds.cpp  processPointClouds.h  project.cpp
SFND_Lidar_Obstacle_Detection/src/quiz/cluster/: cluster_lib.cpp  kdtree.h
SFND_Lidar_Obstacle_Detection/src/quiz/ransac/: ransac2d.cpp  ransac_lib.cpp
camera_cours/1-lidar_to_cpp/lidar_to_camera/src/: project_lidar_to_camera.cpp  show_lidar_top_view.cpp
camera_cours/2-object_detection/detect_objects/src/: detect_objects_2.cpp
camera_cours/4-creating_3d_objects/cluster_with_roi/src/: cluster_with_roi.cpp
camera_cours/descriptor_matching/descriptor_matching/src/: descriptor_matching.cpp
compute_ttc_camera/TTC_camera/src/: compute_ttc_camera.cpp
compute_ttc_lidar/TTC_lidar/src/: compute_ttc_lidar.cpp
